Added JavaDoc