@@ -96,8 +96,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
+                    <enablePreview>true</enablePreview>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                         <arg>--add-modules=jdk.incubator.vector</arg>
                     </compilerArgs>
                 </configuration>
@@ -111,14 +111,17 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.corp.imgpro.edgedetect/com.corp.imgpro.edgedetect.EdgeDetectApplication
-                            </mainClass>
+                            <mainClass>edgedetect/com.corp.imgpro.edgedetect.EdgeDetectApplication</mainClass>
+                            <options>
+                                <option>-XX:-UseCompressedOops -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:-UseCompressedClassPointers --enable-preview -Djava.library.path=/usr/local/share/TornadoVM/bin/sdk/lib --module-path .:/usr/local/share/JavaFX/javafx-sdk-21.0.7/lib:/usr/local/share/TornadoVM/bin/sdk/share/java/tornado -Dtornado.load.api.implementation=uk.ac.manchester.tornado.runtime.tasks.TornadoTaskGraph -Dtornado.load.runtime.implementation=uk.ac.manchester.tornado.runtime.TornadoCoreRuntime -Dtornado.load.tornado.implementation=uk.ac.manchester.tornado.runtime.common.Tornado -Dtornado.load.annotation.implementation=uk.ac.manchester.tornado.annotation.ASMClassVisitor -Dtornado.load.annotation.parallel=uk.ac.manchester.tornado.api.annotations.Parallel --upgrade-module-path /usr/local/share/TornadoVM/bin/sdk/share/java/graalJars -XX:+UseParallelGC @/usr/local/share/TornadoVM/bin/sdk/etc/exportLists/common-exports @/usr/local/share/TornadoVM/bin/sdk/etc/exportLists/opencl-exports --add-modules ALL-SYSTEM,tornado.runtime,tornado.annotation,tornado.drivers.common,tornado.drivers.opencl,javafx.controls,javafx.fxml -Dtornado.debug=False -Dtornado.printKernel=False -Dtornado.threadInfo=False -Duser.country=EN -Duser.language=us</option>
+                            </options>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <jlinkVerbose>true</jlinkVerbose>
                         </configuration>
                     </execution>
                 </executions>
